--- a/wercker.yml
+++ b/wercker.yml
@@ -2,6 +2,8 @@ box: wercker/default
 build:
   steps:
     - script:
+        name: grant permissions
+        code: chmod u+x steps.sh
         name: run docker steps outside docker
         code: ./steps.sh
       
