--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,6 @@ branches:
   
 script:
   - chmod u+x *.sh . -R
-  - sudo su
   #- ./test0.sh
   #- ./test.sh
-  - ./steps.sh
+  - sudo -E su $LOGNAME -c ./steps.sh
