Update and rename wercker-box.yml to wercker.yml

--- a/wercker.yml
+++ b/wercker.yml
@@ -6,14 +6,8 @@ platform: ubuntu@12.04
 description: wercker box for running docker steps
 keywords:
   - opensource
-packages:
-  - rethinkdb@1.15
 script: |
   chmod u+x ./steps.sh
   ./steps.sh
 env:
-  WERCKER_RETHINKDB_PORT: 28015
-  WERCKER_RETHINKDB_HOST: $$HOST$$
-  WERCKER_RETHINKDB_URL: $$HOST$$:28015
-  WERCKER_RETHINKDB_VERSION: "1.15"
-  RETHINKDB_URL: $$HOST$$:28015
+    SOMETHING: 'nothing'
