--- a/wercker.yml
+++ b/wercker.yml
@@ -1,8 +1,7 @@
 name: docker_steps
 version: 0.0.1
-inherits: wercker/ubuntu12.04-webessentials@1.0.4
+box: wercker/ubuntu12.04-webessentials@1.0.4
 type: service
-platform: ubuntu@12.04
 description: wercker box for running docker steps
 keywords:
   - opensource
