--- a/.travis.yml
+++ b/.travis.yml
@@ -21,5 +21,5 @@ script:
   - chmod u+x *.sh . -R
   #- ./test0.sh
   #- ./test.sh
-  - sudo -E su $LOGNAME -
+  - sudo -E su $LOGNAME
   - bash -c ./steps.sh
