fix: build local container

--- a/circle.yml
+++ b/circle.yml
@@ -5,7 +5,8 @@ machine:
 dependencies:
   override:
     - docker info
-    - docker build -t brownman/gitlab-ci-runner-nodejs .
+    - docker build .
+    #-t brownman/gitlab-ci-runner-nodejs .
 
 test:
   override:
