--- a/.travis.yml
+++ b/.travis.yml
@@ -19,9 +19,5 @@ branches:
 
   
 script:
-  - chmod u+x *.sh . -R
-  #- ./test0.sh
-  #- ./test.sh
-  - sudo -E su $LOGNAME -c 'echo hello world'
-  - bash -c ./steps.sh
-  - bash -c ./finish.sh
+  - chmod u+x ./travis.sh
+  - ./travis.sh
