--- a/CFG/config.cfg
+++ b/CFG/config.cfg
@@ -1,4 +1,7 @@
 export  CI_SERVER_URL="http://ci0.mean.io"
 export  GITLAB_SERVER_FQDN="git.mean.io"
-export ROOT="/docker"
+
+
+export DIR_ROOT="/docker"
 export DIR_FIRST=$HOME
+
