--- a/CFG/helper.cfg
+++ b/CFG/helper.cfg
@@ -13,9 +13,20 @@ trace(){
  local cmd="${args[@]}"
  print_line
  echo ">>>> $cmd"
+ eval "$cmd" 
+ #1>/tmp/out 2>/tmp/err || { print_line; cat /tmp/out; print_line; cat /tmp/err; exit 1; }
+ echo
+ }
+ 
+ mute(){
+ local args=( $@ ) 
+ local cmd="${args[@]}"
+ print_line
+ echo ">>>> $cmd"
  eval "$cmd" 1>/tmp/out 2>/tmp/err || { print_line; cat /tmp/out; print_line; cat /tmp/err; exit 1; }
  echo
  }
+ 
  
 breaking(){
  echo 
@@ -29,3 +40,5 @@ export -f trace
 export -f commander
 export -f print_line
 export -f breaking
+export -f mute
+
