--- a/CFG/config.cfg
+++ b/CFG/config.cfg
@@ -2,8 +2,13 @@ export  CI_SERVER_URL="http://ci0.mean.io"
 export  GITLAB_SERVER_FQDN="git.mean.io"
 
 
-export DIR_ROOT="/docker"
-export DIR_FIRST=$HOME
+export dir_docker="/docker"
+export dir_root=$HOME
 
 export USER_ADMIN=$LOGNAME
 # str=$( echo $line  | tr  '[a-z]'   '[A-Z]' )
+
+
+
+
+export dir_ssh=/root
