--- a/CFG/config.cfg
+++ b/CFG/config.cfg
@@ -5,7 +5,8 @@ export  GITLAB_SERVER_FQDN="git.mean.io"
 export dir_docker="/docker"
 export dir_root=$HOME
 
-export USER_ADMIN=$LOGNAME
+export user_docker='docker'
+export user_admin=$LOGNAME
 # str=$( echo $line  | tr  '[a-z]'   '[A-Z]' )
 
 
