--- a/CFG/config.cfg
+++ b/CFG/config.cfg
@@ -9,7 +9,7 @@ export user_docker='docker'
 export user_admin=$LOGNAME
 # str=$( echo $line  | tr  '[a-z]'   '[A-Z]' )
 
-
+export dir_data='/data'
 
 
 export dir_ssh=/root
