fix: duplicated definition for var: dir_root

--- a/CFG/config.cfg
+++ b/CFG/config.cfg
@@ -3,7 +3,7 @@ export  GITLAB_SERVER_FQDN="git.mean.io"
 
 
 export dir_docker="/docker"
-export dir_root=$HOME
+#export dir_root=$HOME
 
 export user_docker='docker'
 export user_admin=$LOGNAME
