--- a/CFG/config.cfg
+++ b/CFG/config.cfg
@@ -16,3 +16,28 @@ export dir_ssh=/root
 
 export dir_nvm=$HOME
 export dir_bashrc=$HOME
+
+export list_npm=' grunt grunt-cli bower jshint jsxhint'
+export list_apt=  'wget \
+  curl \
+  gcc \
+  libxml2-dev \
+  libxslt-dev \
+  libcurl4-openssl-dev \
+  libreadline6-dev \
+  libc6-dev \
+  libssl-dev \
+  make \
+  build-essential \
+  zlib1g-dev \
+  openssh-server \
+  git-core \
+  libyaml-dev \
+  postfix \
+  libicu-dev \
+  libfreetype6 \
+  libfontconfig1 \
+  python-software-properties \
+  libfreetype6 \
+  sudo \
+  tree'
