--- a/CFG/config.cfg
+++ b/CFG/config.cfg
@@ -18,7 +18,7 @@ export dir_nvm=$HOME
 export dir_bashrc=$HOME
 
 export list_npm=' grunt grunt-cli bower jshint jsxhint'
-export list_apt=  'wget \
+export list_apt="wget \
   curl \
   gcc \
   libxml2-dev \
@@ -40,4 +40,5 @@ export list_apt=  'wget \
   python-software-properties \
   libfreetype6 \
   sudo \
-  tree'
+  tree \
+  figlet"
