--- a/CFG/helper.cfg
+++ b/CFG/helper.cfg
@@ -13,8 +13,8 @@ trace(){
  local cmd="${args[@]}"
  print_line
  echo ">>>> $cmd"
- eval "$cmd" 
- #1>/tmp/out 2>/tmp/err || { print_line; cat /tmp/out; print_line; cat /tmp/err; exit 1; }
+ eval "$cmd" 2>/tmp/err || { print_line; cat /tmp/out; print_line; cat /tmp/err; exit 1; }
+ #1>/tmp/out 
  echo
  }
  
