--- a/CFG/helper.cfg
+++ b/CFG/helper.cfg
@@ -1,4 +1,14 @@
-
+cat1(){
+local file=$1
+local file_tmp=$( mktemp )
+while read line;do
+ test -n "$line" || break
+ echo $line >> file_tmp
+done < <( cat $file )
+echo 1>&2 $file
+print_line
+cat 1>&2 -n $file_tmp
+}
 
 trace(){
  echo 1>&2 "[.] $@"
@@ -41,4 +51,4 @@ export -f commander
 export -f print_line
 export -f breaking
 export -f mute
-
+export -f cat1
