--- a/CFG/helper.cfg
+++ b/CFG/helper.cfg
@@ -1,5 +1,6 @@
 cat1(){
 local file=$1
+test -f $file || { trace "[$file] not found"; return 0; }
 local file_tmp=$( mktemp )
 while read line;do
  test -n "$line" || break
