--- a/CFG/helper.cfg
+++ b/CFG/helper.cfg
@@ -1,6 +1,11 @@
-cat1(){
+
+cat_please(){
 local file=$1
 test -f $file || { trace "[$file] not found"; return 0; }
+}
+
+cat1(){
+local file=$1
 local file_tmp=$( mktemp )
 while read line;do
  test -n "$line" || break
@@ -24,7 +29,7 @@ trace(){
  local cmd="${args[@]}"
  print_line
  echo ">>>> $cmd"
- eval "$cmd" 2>/tmp/err || { print_line; cat /tmp/out; print_line; cat /tmp/err; exit 1; }
+ eval "$cmd" 2>/tmp/err || { print_line; cat_please /tmp/out; print_line; cat_please /tmp/err; exit 1; }
  #1>/tmp/out 
  echo
  }
@@ -34,7 +39,7 @@ trace(){
  local cmd="${args[@]}"
  print_line
  echo ">>>> $cmd"
- eval "$cmd" 1>/tmp/out 2>/tmp/err || { print_line; cat /tmp/out; print_line; cat /tmp/err; exit 1; }
+ eval "$cmd" 1>/tmp/out 2>/tmp/err || { print_line; cat_please /tmp/out; print_line; cat_please /tmp/err; exit 1; }
  echo
  }
  
@@ -53,3 +58,4 @@ export -f print_line
 export -f breaking
 export -f mute
 export -f cat1
+export -f cat_please
