--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ cache:
 env:
   global:
     - secure: "cqBfVO7XKbE8MtDHGnB9O4UnMebwxNM5VtzKqFTRcHv1hTO1g/Z1d2fMkqOeLooIwtNAoqKxAvEg/PeGNKoPBKLBKI5suD24mIp2iQ9tOkyp80c4XtBvZBaios4M5cBGCpwML0I8dCj96ECyiuu6FrmwHelWQPQjmzmNC9V/mNQ="
-    - MODE_DEBUG=false
+    - MODE_DEBUG=true
 
   #  dir_root: /home/$LOGNAME
 
