[docker] - try fix complain about LOGNAME

--- a/CFG/config.cfg
+++ b/CFG/config.cfg
@@ -6,7 +6,7 @@ export dir_docker="/docker"
 #export dir_root=$HOME
 
 export user_docker='docker'
-export user_admin=$LOGNAME
+export user_admin="$NAME"
 # str=$( echo $line  | tr  '[a-z]'   '[A-Z]' )
 
 export dir_data='/data'
